Adição do conteúdo das páginas index(home/página inicial), sobre e covid(página de informações sobre a covid-19). Modificação do styles.css para personalização das páginas. Adição das imagens que estão sendo usadas nas páginas.

--- a/FrontEnd/templates/base.html
+++ b/FrontEnd/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 {% block background %}{% endblock %}
     <header>
-      <img class="logo" src="../static/img/TesteLogo.png" alt="logo">
+      <img class="logo" src="../static/img/logo.png" alt="logo">
       <nav>
         <ul>
           <li><a href="/">Página Inicial</a></li>
