--- a/FrontEnd/static/css/styles.css
+++ b/FrontEnd/static/css/styles.css
@@ -2,7 +2,7 @@ body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    background-color:#F5F5F5;
+    background-color:#FCFDFF;
 }
 
 li, a{
@@ -17,13 +17,14 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 2px 8%;
     background-color: #4D6AAC;
 }
 
 .logo{
     cursor: pointer;
-    width: 15%;
+    width: 20%;
+    align-items: flex-start;
 }
 
 nav, ul, li{
@@ -32,3 +33,62 @@ nav, ul, li{
     padding: 10px 20px
 }
 
+.container img {
+    align-items: center;
+    margin-top: 35%;
+    width: 100%;
+    height: 100%;
+}
+.info{
+    max-width:1000px;
+    max-height:200px;
+    width: 50%;
+    height: 50%;
+    margin-block: 2%;
+}
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 8%;
+    background-color: #4D6AAC;
+}
+
+.coluna{
+    float: left;
+    width: 33.3%;
+  }
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  h1 {
+    max-width: 90%;
+    margin: 0 auto;
+    padding-top: 25px;
+}
+
+.block {
+    height: 1250px;
+    width: 1000px;
+   }
+
+
+.space {
+    height: 700px;
+    width: 500px;
+   }
+
+.space2 {
+    height: 350px;
+    width: 200px;
+   }
+
+   h2 {
+    max-width: 80%;
+    margin: 0 auto;
+    padding-top: 25px;
+}
