--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -7,10 +7,27 @@
 {% block conteudo %}
  
 
+
 <div class="Main">
+    <img src="../static/img/img1.png" style="left: 5%; top: 10%; position: absolute; width: 50%;"alt="boasvindas">
+    <img src="../static/img/img2.png" style="right: 5%; top: 45%; position: absolute; width: 50%;"alt="introducao">
 
+    <div class="container">
+        <img src="../static/img/CovidDesenho.png" />
+    </div>
 
-</div>
+<h1>
+
+    <div class="row">
+        <div class="coluna"><a href='/consultar'><img src="../static/img/consulta.png" alt="consulta" style="width:100%"></div></a>
+        <div class="coluna"><a href='/gastos'><img src="../static/img/gastos.png" alt="gastos" style="width:100%"></div></a>
+        <div class="coluna"><a href='/sobre'><img src="../static/img/sobre.png" alt="" style="width:100%"></div></a>
+      
+
+      
+    </h1>
+
+</body>
 {% endblock %}
 
 </html>
