Feitas alteracoes para quando aplicar os filtros na pagina de consultas, apareca um grafico
Foi adicionada uma nova rota em app.py para trazer a nova pagina graficos.html com a imagem do grafico, e foi efetuada uma mudanca no form da pagina consultar

--- a/FrontEnd/templates/graficos.html
+++ b/FrontEnd/templates/graficos.html
@@ -8,7 +8,7 @@
  
 <div class="Main">
 
-  <div class="consulta"></div>
+  <div class="consulta">
     <form id="form" action="/graficos" method="get">
         <h3>Filtros</h3>
         <p>
@@ -42,9 +42,13 @@
         <p>
           <button type="submit" name="aplicar" value="aplicar">Aplicar</button>
           <button type="reset">Limpar</button>
-        </p>
+        </p> 
     </form>
   </div>
+  
+  <div class="grafico">
+    <img class="grafico" src="../static/img/graficocasos.png" alt="grafico">
+  </div>  
 
 
 </div>
