--- a/FrontEnd/templates/consultar.html
+++ b/FrontEnd/templates/consultar.html
@@ -2,50 +2,58 @@
 
 {% block titulo %}<title>Consultar</title>{% endblock %}
 
-{% block background %}<body class="fundo">{% endblock %}
+{% block background %}<body class="fundo" style="background: #f5f4f4;">{% endblock %}
 
 {% block conteudo %}
  
 <div class="Main">
-
-  <div class="consulta"></div>
-    <form id="form" action="/graficos" method="get">
-        <h3>Filtros</h3>
-        <p>
-          <label for="processo">Processo:</label> <br>
-          <select id="processo" name="processo">
-             <option value="medicamento">Medicamentos</option>
-             <option value="consulta">Consultas Médicas</option>
-             <option value="gastos" selected>Gastos</option>
-          </select>
-        </p>
-        <p>
-          <label for="comparar">Critério de Comparação:</label> <br>
-          <select id="comparar" name="comparar">
-             <option value="totais">Totais</option>
-             <option value="aumento">Aumentos</option>
-             <option value="reducao">Reduções</option>
-          </select>
-        </p>
-        <p>
-          <label for="periodo">Periodo:</label> <br>
-          <input id="periodo" name="periodo" type="date" min="2019-01-01" max="2022-12-31">
-        </p>     
-        <p>
-          <label for="cidade">Cidade:</label> <br>
-          <select id="cidade" name="cidade">
-             <option value="sjc">São José dos Campos</option>
-             <option value="jacarei">Jacarei</option>
-             <option value="taubate">Taubate</option>
-          </select>
-        </p>
-        <p>
-          <button type="submit" name="aplicar" value="aplicar">Aplicar</button>
-          <button type="reset">Limpar</button>
-        </p>
-    </form>
+  <div class="flex_container">
+    <div class="flexbox_filtro consultar">
+      <div class="consulta">
+        <form id="form" action="/graficos" method="get">
+            <h3 id="titulo-primario">Filtros</h3>
+            <p>
+              <label for="processo" id="titulo-secundario">Processo:</label> <br>
+              <select id="processo" name="processo">
+                <option value="medicamento">Medicamentos</option>
+                <option value="consulta">Consultas Médicas</option>
+                <option value="gastos" selected>Gastos</option>
+              </select>
+            </p>
+            <p>
+              <label for="comparar" id="titulo-secundario">Critério de Comparação:</label> <br>
+              <select id="comparar" name="comparar">
+                <option value="totais">Totais</option>
+                <option value="aumento">Aumentos</option>
+                <option value="reducao">Reduções</option>
+              </select>
+            </p>
+            <p>
+              <label for="periodo" id="titulo-secundario" >Periodo:</label> <br>
+              <input id="periodo" name="periodo" type="date" min="2019-01-01" max="2022-12-31">
+            </p>     
+            <p>
+              <label for="cidade" id="titulo-secundario">Cidade:</label> <br>
+              <div class="flexbox_filtro_select">
+                <select id="cidade" name="cidade">
+                  <option value="sjc">São José dos Campos</option>
+                  <option value="jacarei">Jacarei</option>
+                  <option value="taubate">Taubate</option>
+                </select>
+              </div>
+            </p>
+            <div class="filtro_botao">
+              <p id="filtro_consultar_botao_aplicar">
+                  <button type="submit" name="aplicar" value="aplicar" id="filtro_consultar_botao_aplicar">Aplicar</button>
+              </p>
+              <p id="filtro_consultar_botao_limpar">
+                  <button type="reset" id="filtro_consultar_botao_limpar">Limpar</button>
+              </p>
+            </div>
+        </form>
+      </div>
+    </div>
   </div>
-
 
 </div>
 
