adicionada uma nova rota no app.py, uma nova imagem na pasta de imagens, e feitas alteracoes nas paginas de consulta e gastos para melhor visualizacao dos graficos
Feitas alteracoes no styles.css para modificar a forma que o grafico aparece na tela das paginas de graficos e graficos de gastos, tambem foi feita uma mudanca na pagina sobre para abrir o link do git em uma nova aba

--- a/FrontEnd/static/css/styles.css
+++ b/FrontEnd/static/css/styles.css
@@ -229,3 +229,14 @@ footer{
     flex-direction: 
         row-reverse;
 }
+
+
+.graficocasos{
+    float: right;
+    width: 50%;
+}
+
+.graficogastos{
+    float: left;
+    width: 40%;
+}
