--- a/FrontEnd/templates/sobre.html
+++ b/FrontEnd/templates/sobre.html
@@ -11,7 +11,7 @@
         <h2>
             <div class="row">
                 <div><a href='/info'><img src="../static/img/acesseinformação.png" style="width: 100%;" alt="acesso"></div></a>
-                <div><a href="http://github.com/APIEquipe/EquipeTechEmpireAPI"><img src="../static/img/sobrenos.png" style="width: 100%;"></a></div></a>
+                <div><a href="http://github.com/APIEquipe/EquipeTechEmpireAPI" target="_blank"><img src="../static/img/sobrenos.png" style="width: 100%;"></a></div></a>
             </div>
         </h2>
 
