--- a/FrontEnd/templates/graficosgastos.html
+++ b/FrontEnd/templates/graficosgastos.html
@@ -8,10 +8,11 @@
  
 <div class="Main">
     <div class="flex_container">
-        <div class="container_gastos">
+        <img class="graficogastos" src="../static/img/graficogastos.png" alt="grafico">
+        <div class="container_gastos">            
             <div class="flexbox_filtro consultar">
                 <div class="consulta">
-                    <form id="form" action="/graficosgastos" method="get">
+                    <form id="form" action="/gastos" method="get">
                         <h3 id="titulo-primario">Filtros</h3>
                         <p>
                         <label for="processo" id="titulo-secundario">Processo:</label> <br>
@@ -48,7 +49,7 @@
                                 <button type="submit" name="aplicar" value="aplicar" id="filtro_consultar_botao_aplicar">Aplicar</button>
                             </p>
                             <p id="filtro_consultar_botao_limpar">
-                                <button type="reset" id="filtro_consultar_botao_limpar">Limpar</button>
+                                <button type="submit" id="filtro_consultar_botao_limpar">Limpar</button>
                             </p>
                           </div>
                     </form>
@@ -56,7 +57,6 @@
             </div>
         </div>
     </div>
-
 </div>
 
 {% endblock %}
