Correção na seleção do período - diminuição de opções para os anos de 2019 a 2022.

--- a/FrontEnd/templates/gastos.html
+++ b/FrontEnd/templates/gastos.html
@@ -30,8 +30,13 @@
                         </select>
                         </p>
                         <p>
-                        <label for="periodo" id="titulo-secundario" >Periodo:</label> <br>
-                        <input id="periodo" name="periodo" type="date" min="2019-01-01" max="2022-12-31">
+                        <label for="periodo" id="titulo-secundario">Período:</label> <br>
+                        <select id="periodo" name="periodo">
+                            <option value="2019">2019</option>
+                            <option value="2020">2020</option>
+                            <option value="2021">2021</option>
+                            <option value="2022">2022</option>
+                        </select>
                         </p>     
                         <p>
                         <label for="cidade" id="titulo-secundario">Cidade:</label> <br>
