Mudança na página Sobre, troca das imagens por texto

--- a/FrontEnd/templates/sobre.html
+++ b/FrontEnd/templates/sobre.html
@@ -7,6 +7,24 @@
 {% block conteudo %}
  
 <div class="Main">
+    
+
+<div class="texto">
+    <div>
+        <h1>Sobre a covid-19:</h1>
+        <h2>A COVID-19 é uma doença infecciosa causada pelo coronavírus SARS-CoV-2, que foi descoberto pela primeira vez na cidade chinesa de Wuhan, em dezembro de 2019. Desde então, a doença se espalhou rapidamente pelo mundo, tornando-se uma pandemia global em março de 2020.
+
+        Os sintomas da COVID-19 variam de leves a graves e podem incluir febre, tosse, dificuldade para respirar, fadiga, dor de cabeça, perda do olfato ou paladar, dor de garganta, dores musculares, calafrios, entre outros. Algumas pessoas infectadas não apresentam sintomas, mas ainda assim podem transmitir o vírus para outras pessoas.
+        
+        A COVID-19 se espalha principalmente de pessoa para pessoa por meio de gotículas respiratórias que são expelidas quando uma pessoa infectada tosse, espirra, fala ou respira.
+        Também é possivel contrair o virus tocando em superfícies contaminadas e, em seguida, tocando no rosto.</h2>
+        <br>
+        <br>
+        <br>
+   </div>
+</div>
+<div class="btn"><a href="https://aminoapps.com/c/crie-seu-oc/page/item/como-se-tornar-humano/6PdR_G33HYIPdRmJ80kzBekv1PB4BjgeG4p"><button id="botao">Acesse mais informações aqui!</button></a></div>
+
 
         <h2>
             <div class="row">
