--- a/FrontEnd/templates/base.html
+++ b/FrontEnd/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for ('static', filename='css/normalize.css') }}">
     <link rel="stylesheet" href="{{url_for ('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{url_for ('static', filename='css/formas.css') }}">
 
 
     {% block titulo %}{% endblock %}
