--- a/FrontEnd/templates/base.html
+++ b/FrontEnd/templates/base.html
@@ -20,6 +20,7 @@
           <li><a href="/consultar">Consultar</a></li>
           <li><a href="/gastos">Gastos</a></li>
           <li><a href="/sobre">Sobre</a></li>
+          <li><a href="/sugestao">Sugestão</a></li>
         </ul>
       </nav>
     </header>
