Finalização das correções na página Sobre.html

--- a/FrontEnd/templates/sobre.html
+++ b/FrontEnd/templates/sobre.html
@@ -23,15 +23,22 @@
         <br>
    </div>
 </div>
-<div class="btn"><a href="https://aminoapps.com/c/crie-seu-oc/page/item/como-se-tornar-humano/6PdR_G33HYIPdRmJ80kzBekv1PB4BjgeG4p"><button id="botao">Acesse mais informações aqui!</button></a></div>
+<div class="btn"><a href="/info"><button id="botao">Acesse mais informações aqui!</button></a></div>
 
-
+<div class="texto">
+    <div>
+        <h1>Sobre nós:</h1>
         <h2>
-            <div class="row">
-                <div><a href='/info'><img src="../static/img/acesseinformação.png" style="width: 100%;" alt="acesso"></div></a>
-                <div><a href="http://github.com/APIEquipe/EquipeTechEmpireAPI" target="_blank"><img src="../static/img/sobrenos.png" style="width: 100%;"></a></div></a>
-            </div>
+            Dada a carência de dados a nível regional sobre a covid longa, envolvendo gastos, número de casos e número de óbitos para pesquisas, é necessário coletar e armazenar de forma acessível esses dados na região de cobertura da Vanguarda(Vale do Paraíba), especificamente sobre suas principais cidades: Jacareí, São José dos Campos e Taubaté.
+
+            Então, dada tal problemática, nós da equipe TechEmpire desenvolvemos um sistema para facilitar a extração de tais dados e consequentemente facilitar também o desenvolvimento a respeito desse tema, além de ajudar em pesquisas sobre a Covid longa, resultante da contaminação com a covid-19.
         </h2>
+        <br>
+        <br>
+        <br>
+   </div>
+</div>
+<div class="btn"><a href="http://github.com/APIEquipe/EquipeTechEmpireAPI"><button id="botao">Acesse aqui nosso GitHub!</button></a></div>
 
 </div>
 {% endblock %}
