--- a/FrontEnd/static/css/formas.css
+++ b/FrontEnd/static/css/formas.css
@@ -13,7 +13,7 @@
     font-size: 8vh;
     text-align:center;
     letter-spacing: 5%;
-    color: #FFFFFF;
+    color: #ffffff;
     border-radius: 10px 20px 30px;
     margin-top: 3%;
   }
@@ -32,7 +32,7 @@
       border-radius: 6px;
       padding: 15px;
       cursor: pointer; 
-      color: #fff;
+      color: #fdff9cd7;
       border: none;
       font-size: 4vh;
       cursor: pointer;
