--- a/FrontEnd/templates/sucesso.html
+++ b/FrontEnd/templates/sucesso.html
@@ -1,20 +1,33 @@
 {% extends "base.html" %}
 
-{% block titulo %}<title>Sucesso!
-</title>{% endblock %}
+{% block titulo %}<title>Sucesso!</title>{% endblock %}
 
 {% block background %}<body class="fundo">{% endblock %}
 
 {% block conteudo %}
  
-<div class="Main">
+<br>
+<br>
+<br>
+<br>
+<div class="inicial">
+    <h1>
+        Sucesso!
+    </h1>
+    
+    <br>
 
-<h1>
-    Sucesso!
-</h1>
+    <p>
+        Sua sugestão foi enviada com sucesso!
+    </p>
+    
+    <br>
 
+    <br>
+<br>
+<br>
+<br>
 </div>
-
 
 {% endblock %}
 
