--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -6,11 +6,31 @@
 
 {% block conteudo %}
  
+<div class="capa">
+    <div>
+        <h2>
+            Portal de fácil acesso às informações da covid-19 e covid longa no Vale do Paraíba.
+        </h2>
+        <br>
+        <br>
+   </div>
+</div>
 
-
-<div class="Main">
-    <img src="../static/img/img1.png" style="left: 5%; top: 10%; position: absolute; width: 50%;"alt="boasvindas">
-    <img src="../static/img/img2.png" style="right: 5%; top: 45%; position: absolute; width: 50%;"alt="introducao">
+<div class="capa2">
+    <div>
+        <h2>
+            <li>Medicamentos</li>
+            <li>gastos</li>
+            <li>Procedimentos</li>
+            <li>Consultas</li>
+            <br>
+            <li>E mais informações sobre a covid-19 e covid-longa</li>
+            <br>
+        </h2>
+        <br>
+        <br>
+   </div>
+</div>
 
     <div class="container">
         <img src="../static/img/CovidDesenho.png" />
