--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -18,15 +18,12 @@
 
 <div class="capa2">
     <div>
-        <h2>
-            <li>Medicamentos</li>
-            <li>gastos</li>
-            <li>Procedimentos</li>
-            <li>Consultas</li>
+        <h3>
             <br>
-            <li>E mais informações sobre a covid-19 e covid-longa</li>
             <br>
-        </h2>
+            Tenha acesso facilitado aos dados de medicamentos, gastos, procedimentos e consultas, além de mais informações a cerca da covid-19 e covid-longa.
+            <br>
+        </h3>
         <br>
         <br>
    </div>
