--- a/FrontEnd/static/css/styles.css
+++ b/FrontEnd/static/css/styles.css
@@ -5,6 +5,10 @@ body {
     background-color:#FCFDFF;
 }
 
+*{
+    box-sizing: border-box;
+}
+
 li, a{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
