--- a/FrontEnd/templates/sugestao.html
+++ b/FrontEnd/templates/sugestao.html
@@ -36,7 +36,7 @@
              <input type="text" name="assunto">
              <br>
              <br>
-             <label for="sugestao">Sugestão</label>
+             <label for="sugestao">Sugestão:</label>
              <br>
              <br>
             <textarea id="sugestao" name="sugestao"></textarea>
