Atualização do requirements.txt, corringido linha nas paginas covid e sobre para que os links externos sejam abertos em nova aba, correção no formulario da pagina sugestao para que no campo de email seja pedido um formato de email valido e mudança na exibição do formulario

--- a/FrontEnd/templates/sobre.html
+++ b/FrontEnd/templates/sobre.html
@@ -37,7 +37,7 @@
         <br>
    </div>
 </div>
-<div class="btn"><a href="http://github.com/APIEquipe/EquipeTechEmpireAPI"><button id="botao">Acesse aqui nosso GitHub!</button></a></div>
+<div class="btn"><a href="http://github.com/APIEquipe/EquipeTechEmpireAPI" target="_blank"><button id="botao">Acesse aqui nosso GitHub!</button></a></div>
 
 <br>
 <br>
