--- a/FrontEnd/templates/sugestao.html
+++ b/FrontEnd/templates/sugestao.html
@@ -24,27 +24,15 @@
 <div class="formulario">
     <br>
     <form method="post">
-             Seu e-mail:
-             <br>
-             <p id="bonito">
-             <input type="text" name="email">
-             <br>
-            </p>
-             Assunto:
-             <br>
-             <br>
-             <input type="text" name="assunto">
-             <br>
-             <br>
-             <label for="sugestao">Sugestão:</label>
-             <br>
-             <br>
-            <textarea id="sugestao" name="sugestao"></textarea>
-            <br>
-    
-    <p>
-    <input type="submit" id="botaoenviar" value="Enviar">
-    </p>
+            Seu e-mail: <br>                
+            <p><input type="email" name="email"> <br></p> 
+            <p> Assunto: <br></p>
+            <p><input type="text" name="assunto"> <br></p>
+            <p><label for="sugestao">Sugestão:</label> <br></p>
+            <p><textarea id="sugestao" name="sugestao"></textarea> <br></p>
+        <p>
+         <input type="submit" id="botaoenviar" value="Enviar">
+        </p>
     <br>
     <br>
 </form>
