adição do 'action=/sugestao' em sugestão.html

--- a/FrontEnd/templates/sugestao.html
+++ b/FrontEnd/templates/sugestao.html
@@ -23,7 +23,7 @@
 
 <div class="formulario">
     <br>
-    <form method="post">
+    <form method="POST" action="/sugestao">
             Seu e-mail: <br>                
             <p><input type="email" name="email"> <br></p> 
             <p> Assunto: <br></p>
