--- a/FrontEnd/templates/base.html
+++ b/FrontEnd/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
     <link rel="stylesheet" href="{{url_for ('static', filename='css/normalize.css') }}">
     <link rel="stylesheet" href="{{url_for ('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{url_for ('static', filename='css/formas.css') }}">
